[package]
name = "mempool-radar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
home = "0.5.11"
corepc-client = { version = "0.9.0", features = ["client-sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zeromq = "0.4"
