[package]
name = "mempool-radar"
version = "0.1.0"
edition = "2024"

[lib]
name = "mempool_radar"
path = "src/lib.rs"

[[bin]]
name = "mempool-radar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
home = "0.5.11"
corepc-client = { version = "0.9.0", features = ["client-sync"] }
nostr-sdk = "0.38"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeromq = "0.4"

[dev-dependencies]
corepc-node = { version = "0.9.0", features = ["download", "28_2"] }
tracing-test = "0.2.5"
